tests/ui/errors/slot_builder_spans.stderr
warning: use of deprecated method `SChildrenBuilder::<((), __children)>::build`: Missing required field an_attr
  --> tests/ui/errors/slot_builder_spans.rs:22:18
   |
22 |             slot:SChildren { "hi" }
   |                  ^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/errors/slot_builder_spans.rs:22:18
   |
22 |             slot:SChildren { "hi" }
   |                  ^^^^^^^^^ an argument of type `SChildrenBuilder_Error_Missing_required_field_an_attr` is missing
   |
note: method defined here
  --> tests/ui/errors/slot_builder_spans.rs:10:1
   |
10 | #[slot]
   | ^^^^^^^
   = note: this error originates in the derive macro `::leptos::typed_builder_macro::TypedBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
22 |             slot:SChildren(/* SChildrenBuilder_Error_Missing_required_field_an_attr */) { "hi" }
   |                           +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> tests/ui/errors/slot_builder_spans.rs:29:49
   |
29 |         TakesSChildren { slot:SChildren an_attr="no" { "what" } }
   |                                         ------- ^^^^ expected `i32`, found `&str`
   |                                         |
   |                                         arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/errors/slot_builder_spans.rs:12:5
   |
12 |     an_attr: i32,
   |     ^^^^^^^-----

error[E0308]: mismatched types
  --> tests/ui/errors/slot_builder_spans.rs:37:38
   |
37 |             slot:SChildren an_attr=1 |s| { "this is " {s} }
   |                                      ^^^ expected `Rc<dyn Fn() -> Fragment>`, found closure
   |
   = note: expected struct `Rc<(dyn std::ops::Fn() -> Fragment + 'static)>`
             found closure `{closure@$DIR/tests/ui/errors/slot_builder_spans.rs:37:38: 37:41}`

error[E0599]: no method named `children` found for struct `SNoChildrenBuilder` in the current scope
  --> tests/ui/errors/slot_builder_spans.rs:53:42
   |
42 |   #[slot]
   |   ------- method `children` not found for this struct
...
51 |       _ = mview! {
   |  _________-
52 | |         TakesSNoChildren {
53 | |             slot:SNoChildren an_attr=5 { "hey!" }
   | |                                         -^^^^^^ method not found in `SNoChildrenBuilder<((i32,),)>`
   | |_________________________________________|
   |

error[E0277]: the trait bound `leptos::Callback<i32, leptos::View>: ToChildren<{closure@$DIR/tests/ui/errors/slot_builder_spans.rs:73:37: 73:43}>` is not satisfied
  --> tests/ui/errors/slot_builder_spans.rs:71:9
   |
71 |       _ = mview! {
   |  _________^
72 | |         TakesSClosureChildren {
73 | |             slot:SClosureChildren { "hey!" }
74 | |         }
75 | |     };
   | |_____^ the trait `ToChildren<{closure@$DIR/tests/ui/errors/slot_builder_spans.rs:73:37: 73:43}>` is not implemented for `leptos::Callback<i32, leptos::View>`
   |
   = help: the following other types implement trait `ToChildren<F>`:
             Box<(dyn FnMut() -> Fragment + 'static)>
             Box<(dyn FnOnce() -> Fragment + 'static)>
             Box<(dyn std::ops::Fn() -> Fragment + 'static)>
             Rc<(dyn std::ops::Fn() -> Fragment + 'static)>
   = note: this error originates in the macro `mview` (in Nightly builds, run with -Z macro-backtrace for more info)
